--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -8,11 +8,11 @@
 <channel>
 	<title>
 	Comments for EM Consulting	</title>
-	<atom:link href="https://em-consulting.gq/comments/feed/" rel="self" type="application/rss+xml" />
-	<link>http://em-consulting.gq/</link>
+	<atom:link href="https://finderscoach.com/comments/feed/" rel="self" type="application/rss+xml" />
+	<link>http://finderscoach.com/</link>
 	<description>Lasting Peace &#38; Happiness</description>
 	<lastBuildDate>
-	Fri, 16 Aug 2019 09:32:43 +0000	</lastBuildDate>
+	Sun, 01 Sep 2019 23:06:43 +0000	</lastBuildDate>
 	<sy:updatePeriod>
 	hourly	</sy:updatePeriod>
 	<sy:updateFrequency>
