--- a/comments/feed/index.html
+++ b/comments/feed/index.html
@@ -7,12 +7,12 @@
 	>
 <channel>
 	<title>
-	Comments for EM Consulting	</title>
+	Comments for Finders Coach	</title>
 	<atom:link href="https://finderscoach.com/comments/feed/" rel="self" type="application/rss+xml" />
 	<link>http://finderscoach.com/</link>
 	<description>Lasting Peace &#38; Happiness</description>
 	<lastBuildDate>
-	Sun, 01 Sep 2019 23:06:43 +0000	</lastBuildDate>
+	Mon, 02 Sep 2019 00:53:44 +0000	</lastBuildDate>
 	<sy:updatePeriod>
 	hourly	</sy:updatePeriod>
 	<sy:updateFrequency>
